<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.esri.arcgis.sample.MainActivity" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:title="@string/action_place_search"
        android:showAsAction="always|collapseActionView"
        android:icon="@drawable/ic_action_search_dark" />
    
    <item
        android:id="@+id/action_clear"
        android:showAsAction="always"
        android:title="@string/action_clear_screen"
        android:icon="@drawable/ic_action_delete_dark" />
    
    <item
        android:id="@+id/action_add_polygon_barrier"
        android:showAsAction="never"
        android:title="@string/action_add_polygon_barrier" />
    
    <item
        android:id="@+id/action_add_polyline_barrier"
        android:showAsAction="never"
        android:title="@string/action_add_polyline_barrier"
        android:icon="@drawable/ic_action_draw_polyline_dark" />
    
    <item 
        android:id="@+id/action_load_geodatabase"
        android:showAsAction="never"
        android:title="@string/action_load_geodatabase"/>
    
    <item
        android:id="@+id/action_load_network"
        android:showAsAction="never"
        android:title="@string/action_load_network"/>
    
    <item
        android:id="@+id/action_load_locator"
        android:showAsAction="never"
        android:title="@string/action_load_locator" />    
        
    <item
        android:id="@+id/action_load_local_tiled_layer"
        android:showAsAction="never"
        android:title="Load Local Tiled Layer" />
    
    <item
        android:id="@+id/action_navigate"
        android:showAsAction="never"
        android:title="Navigate" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
